MOSIP-29974 fixed alignment issue in share with partner and get personalized card pages

--- a/resident-ui/src/app/feature/uinservices/sharewithpartner/sharewithpartner.component.css
+++ b/resident-ui/src/app/feature/uinservices/sharewithpartner/sharewithpartner.component.css
@@ -95,7 +95,7 @@
   border-radius: 6px; 
   padding: 12px;
   overflow-wrap: break-word;
-  width: 100%; 
+  width: 99%; 
 }
 
 
